fixed bug on navbar that it added whitespace and horizontal scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,7 @@ html {
 html,
 body {
   font-family: 'Lora', serif;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 4rem;
@@ -158,6 +159,7 @@ a {
   background-color: #ffe74c;
   border: none;
   padding: 10px 0;
+  margin: 0;
 }
 .navbar img {
   width: 100%;
@@ -210,6 +212,9 @@ footer .fa-facebook {
 }
 footer .copyright {
   text-align: center;
+}
+main {
+  width: 100%;
 }
 main #jumbotron {
   display: flex;
