--- a/less/global.less
+++ b/less/global.less
@@ -10,6 +10,7 @@ html {
 
 html, body {
   font-family: 'Lora', serif;
+  overflow-x: hidden;
 }
 
 h1 {
