--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,7 @@
   background-color: @navBackground;
   border: none;
   padding: 10px 0;
+  margin: 0;
 
   img {
     width: 100%;
